--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -24,16 +24,16 @@
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="css/style2.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="/css/tabla.css">
+    <link rel="stylesheet" type="text/css" href="/css/style2.css">
 </head>
 
 <body>
   <div class="hero_area">
     <!-- header section strats -->
-    <nav class="navBar">
+      <nav class="navBar">
     <div class="logo">
       <img src="/img/logo1.png">
     </div>
@@ -52,31 +52,43 @@
     <table>
       <thead>
         <tr>
-          <th>id</th>
-          <th>codigo</th>
-          <th>producto</th>
-          <th>categoria_id</th>
-          <th>existencia_actual</th>
-          <th>precio</th>
-          <th><a href="/agregarProducto"><img width="33" src="/icon/add.png"></a></th>
+          <th>ID</th>
+          <th>categoria</th>
+          <th>_ _</th>
+          <th>_ _</th>
+          <th>_ _</th>
+          <th>_ _</th>
+          <th>_ _</th>
+          <th>_ _</th>
+          <th>_ _</th>
+          <th>_ _</th>
+          <th>_ _</th>
+          <th>_ _</th>
+         
+          <th><a href="/agregarCategoria"><img width="33" src="/icon/add.png"></a></th>
       </tr>
       </thead>
       <tbody>
-        <% for(let x = 0; x < p.length;x++){ %>
-        <tr>
-          <td><%=p[x].id%></td>
-          <td><%=p[x].codigo%></td>
-          <td><%=p[x].producto%></td>
-          <td><%=p[x].categoria_id%></td>
-          <td><%=p[x].existencia_actual%></td>
-          <td><%=p[x].precio%></td>
-          <td>
-            <a href="/updateProducto/<%=p[x].id%>"><img width="33" src="/icon/update.png"></a>
-            <a href="/deleteProducto/<%=p[x].id%>"><img width="33" src="/icon/delete.png"></a>
+      <% for(let x = 0; x < c.length;x++){ %>
+      <tr>
+        <td><%=c[x].id%></td>
+         <td><%=c[x].categoria%></td>
+           <td>_ _</td>
+           <td>_ _</td>
+           <td>_ _</td>
+           <td>_ _</td>
+           <td>_ _</td>
+           <td>_ _</td>
+           <td>_ _</td>
+           <td>_ _</td>
+           <td>_ _</td>
+           <td>_ _</td>
+         <td>
+            <a href="/updateCategoria/<%=c[x].id%>"><img width="33" src="/icon/update.png"></a>
+            <a href="/deleteCategoria/<%=c[x].id%>"><img width="33" src="/icon/delete.png"></a>
           </td>
-          
-        </tr>
-        <% } %>
+      </tr>
+      <% } %>
         <!-- Agrega más filas según sea necesario -->
       </tbody>
     </table>
