--- a/views/agregarProducto.ejs
+++ b/views/agregarProducto.ejs
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Agregar</title>
+  <title>Login</title>
   
 
 </head>
@@ -12,7 +12,7 @@
 <html lang="en">
 <head>
   <!-- Design by foolishdeveloper.com -->
-    <title>Agregar</title>
+    <title>Login</title>
  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -172,9 +172,10 @@ select{
                        <label>categoria</label> 
 
                        <select name="categoria_id">
-                        <% for(let x = 0; x < c.length;x++ ){ %>
-                         <option value="<%=c[x].categoria%>"><%=c[x].categoria%></option>
-                        <% } %>
+                           <option value="A">A</option>
+                           <option value="B">B</option>
+                           <option value="C">C</option>
+                           <option value="D">D</option>
                        </select> 
                     
                   </div>
