--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -28,15 +28,28 @@
   <link href="css/responsive.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="/css/tabla.css">
     <link rel="stylesheet" type="text/css" href="/css/style2.css">
+     <style type="text/css">
+    .navBar{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background:rgb(133, 71, 202);height:15vh;
+    }
+    .ulContainer{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap:4rem;
+      list-style: none;
+    }
+  </style>
 </head>
 
 <body>
   <div class="hero_area">
     <!-- header section strats -->
       <nav class="navBar">
-    <div class="logo">
-      <img src="/img/logo1.png">
-    </div>
+    
     <ul class='ulContainer'>
       <li class="li"><a style="color:white" href="/productos">Productos</a></li>
       <li class="li"><a style="color:white" href="/categorias">Categorias</a></li>
