--- a/views/main.ejs
+++ b/views/main.ejs
@@ -51,8 +51,8 @@
             </div>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="/">PRODUCTOS</a>
-                <a href="/">CATEGORIAS</a>
+                <a href="/productos">PRODUCTOS</a>
+                <a href="/categorias">CATEGORIAS</a>
                 <a href="/">COMPRAS</a>
                 <a href="/">FAVORITOS</a>
                 <a href="/">CERRAR</a>
